# doodlebot

./: .gitignore  README.md  convert_svg.py  lego_plotter.py  mock_plotter.py  pyproject.toml
lego_wall_plotter/device/: clean_custom_dir.sh  copy_instructions_from_host_to_device.sh  lego_plotter.py  lego_wall_plotter_heart.lms  make_custom_dir.sh  readme.md
lego_wall_plotter/host/: base_types.py  constants.py  convert_svg.py  convert_svg_paths.py  distance.py  main.py  make_motor_instructions.py  make_preview.py  mock_plotter.py  motor_instructions.py  motor_instructions_file.py
