[tool.poetry]
name = "lego-wall-plotter"
version = "0.1.0"
description = ""
authors = ["Berry van Someren"]
readme = "README.md"
packages = [{include = "lego_wall_plotter"}]

[tool.poetry.dependencies]
python = "^3.10"
svgpathtools = "^1.6.0"
rshell = "^0.0.31"
adafruit-ampy = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
